--- a/admin/config.yml
+++ b/admin/config.yml
@@ -31,6 +31,11 @@ collections:
             fields:
               - { label: "Título", name: "title", widget: "string" }
               - { label: "Contenido", name: "content", widget: "markdown" }
+              - label: "Sección"
+                name: "section"
+                widget: "select"
+                options: ["Productos bancarios","Preguntas frecuentes","Procesos"]
+                allow_add: true
 
   - name: "finanzas"
     label: "Aprende de Finanzas"
@@ -45,3 +50,8 @@ collections:
             fields:
               - { label: "Título", name: "title", widget: "string" }
               - { label: "Contenido", name: "content", widget: "markdown" }
+              - label: "Sección"
+                name: "section"
+                widget: "select"
+                options: ["Productos bancarios","Preguntas frecuentes","Procesos"]
+                allow_add: true
